--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 	<title>Simple Sport - game</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220623161256">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220623195103">
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
 </head>
@@ -588,7 +588,11 @@
 						</div>
 					</div>
 					<div class="game__field field">
-						<div class="field__body"></div>
+						<div class="field__body">
+							<div class="field__square">
+								<picture><source srcset="img/game/field.webp" type="image/webp"><img src="img/game/field.png" alt="Image"></picture>
+							</div>
+						</div>
 					</div>
 					<div class="game__info info-game">
 						<div class="info-game__body">
@@ -1037,8 +1041,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220623161256"></script>
-	<script src="js/app.min.js?_v=20220623161256"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220623195103"></script>
+	<script src="js/app.min.js?_v=20220623195103"></script>
 </body>
 
 </html>
